--- a/src/system.properties
+++ b/src/system.properties
@@ -1,5 +1,6 @@
 #System configurations
 admin.userid=sa
+admin.name=\u8d85\u7ea7\u7ba1\u7406\u5458
 admin.password=think4zhang
 
 # Remember last input quantity, and fill it into form automatically next time
