--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -55,4 +55,7 @@
     <filter-name>struts-cleanup</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+  <listener>
+	<listener-class>com.openthinks.ae.system.web.InitializationListener</listener-class>
+  </listener>
 </web-app>
